--- a/package.json
+++ b/package.json
@@ -7,6 +7,6 @@
     "test": "echo \"Tests passed successfully!\" && exit 0"
   },
   "dependencies": {
-    "express": "4.18.2"
+    "express": "^4.21.2"
   }
 }
